--- a/css/styles.css
+++ b/css/styles.css
@@ -64,3 +64,19 @@ video {
     object-fit: cover;
   }
 }
+
+@keyframes blink {
+  0%, 100% { opacity: 0.2; }
+  50% { opacity: 1; }
+}
+.loader-dots span {
+  animation: blink 1.4s infinite;
+  font-size: 2rem;
+  padding: 0 5px;
+}
+.loader-dots span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.loader-dots span:nth-child(3) {
+  animation-delay: 0.4s;
+}
